2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/unparse.cpp: Adjust bodies to use LexStream*.  Replace a use
	of "\n" by endl.  Add comment.  Make line breaks in if statements
	consistent.
	* src/ast.h: Adjust Unparse prototypes to take LexStream*, not
	LexStream&.
	* src/control.cpp (CleanUp): Use LexStream* - patch 198.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/bytecode.cpp (EmitAssignmentExpression): 
	* src/control.cpp (Serializable_type): 
	* src/depend.cpp (OutputMake): 
	* src/dump.cpp (Dump): Disambiguate error messages - patch 200.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/ast.cpp (AstSwitchBlockStatement): Fix some debug output
	formatting errors - patch 197.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/decl.cpp (ProcessFieldDeclaration): 
	* src/diagnose.cpp (getErrorMessage):
	* src/stream.cpp (ProcessInputUnicode): Explicitly initialize some
	variables, restrict scope of temporaries, and fix some comment
	typos - patches 202, 203.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/platform.h: Add prototype SystemMkdirhierForFile.
	* src/platform.cpp (SystemMkdirhierForFile): Add definition.
	* src/unparse.cpp (Unparse): Use SystemMkdirhierForFile - patch
	199.

2001-10-15  Michael Ernst  <mernst@alum.mit.edu>

	* src/platform.h: Fix typos, and reindent comments to 80 columns -
	patch 204.

2001-10-15  C. Scott Ananian  <cananian@alumni.princeton.edu>

	* src/body.cpp (ProcessClassDeclaration): Hack to fix bug 1954:
	patch 86 broke behavior of local classes in a static context; this
	needs to be fixed correctly before 1.16 - patch 195.

2001-10-15  Michael Ernst  <mernst@alum.mit.edu>

	* src/stream.cpp:
	* src/stream.h (class LexStream): Change file_read to bool, to
	match its use - patch 201.

2001-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h (InvertIfOpCode): Fix regression caused by patch
	167, as reported in bug 1982 - patch 205.

2001-10-14  Eric Blake  <ebb9@email.byu.edu>